--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,11 @@
                 <data android:mimeType="video/webm" />
                 <data android:mimeType="video/avi" />
                 <data android:mimeType="application/sdp" />
+                <data android:mimeType="video/x-flv" />
+                <data android:mimeType="video/x-msvideo" />
+                <data android:mimeType="video/x-ms-asf" />
+                <data android:mimeType="video/x-ms-wmv" />
+                <data android:mimeType="video/mpeg" />
              </intent-filter>
              <intent-filter>
                 !-- HTTP live support -->
@@ -125,6 +130,11 @@
                 <data android:mimeType="video/3gpp" />
                 <data android:mimeType="video/3gpp2" />
                 <data android:mimeType="application/sdp" />
+                <data android:mimeType="video/x-flv" />
+                <data android:mimeType="video/x-msvideo" />
+                <data android:mimeType="video/x-ms-asf" />
+                <data android:mimeType="video/x-ms-wmv" />
+                <data android:mimeType="video/mpeg" />
             </intent-filter>
             <!-- We do NOT support the PICK intent, we add these intent-filter for
                  backward compatibility. Handle it as GET_CONTENT. -->
