ENGR00133115 Make .mov, .mkv, .webm .flv, .asf, .wmv to streaming
            Add quiktime, matroska, flv, asf, wmv mimetype for http streaming,
            to make .mov, .mkv, .webm, .flv, .asf, .wmv streams to streaming not
            download source.

Signed-off-by: Xu Mao <B34688@freescale.com>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -69,6 +69,13 @@
                 <data android:mimeType="video/webm" />
                 <data android:mimeType="video/avi" />
                 <data android:mimeType="application/sdp" />
+                <data android:mimeType="video/x-flv" />
+                <data android:mimeType="video/x-msvideo" />
+                <data android:mimeType="video/x-ms-asf" />
+                <data android:mimeType="video/x-ms-wmv" />
+                <data android:mimeType="video/mpeg" />
+                <data android:mimeType="video/quicktime" />
+                <data android:mimeType="video/x-matroska" />
              </intent-filter>
              <intent-filter>
                 !-- HTTP live support -->
@@ -142,6 +149,13 @@
                 <data android:mimeType="video/3gpp" />
                 <data android:mimeType="video/3gpp2" />
                 <data android:mimeType="application/sdp" />
+                <data android:mimeType="video/x-flv" />
+                <data android:mimeType="video/x-msvideo" />
+                <data android:mimeType="video/x-ms-asf" />
+                <data android:mimeType="video/x-ms-wmv" />
+                <data android:mimeType="video/mpeg" />
+                <data android:mimeType="video/quicktime" />
+                <data android:mimeType="video/x-matroska" />
             </intent-filter>
             <!-- We do NOT support the PICK intent, we add these intent-filter for
                  backward compatibility. Handle it as GET_CONTENT. -->
